[project]
name = "service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "boto3>=1.37.4",
    "fastapi-structlog>=0.6.1",
    "fastapi>=0.115.10",
    "numpy>=2.2.3",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "structlog>=25.1.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "uvicorn>=0.34.0",
]
